# xfgwinter

./: COMMIT_MESSAGE.md  Cargo.toml  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  WINTERFELL_IMPLEMENTATION_COMPLETE.md  WINTERFELL_INTEGRATION_SUMMARY.md
background-agents/: ALLOWLIST_COMMANDS.json  ALLOWLIST_COMMANDS.md  BACKGROUND_AGENTS_SUMMARY.md  Cargo.toml  LICENSE  QUICK_START.md  README_BACKGROUND_AGENTS.md  SETUP_COMPLETE.md  check_status.sh  env.example  requirements.txt  requirements_simple.txt  setup_background_agents.py  start_agents.sh  start_background_agents.py
background-agents/agents/: __init__.py  base_agent.py  code_quality_guardian.py  coordination_monitor.py  documentation_assistant.py  integration_bridge.py  performance_monitor.py  security_sentinel.py
background-agents/agents/type-specialist/: AGENT_SPECIFICATION.md
background-agents/config/: agents.json  git_integration.json  xfg_integration.json
background-agents/config/rules/: elite_validation_rules.json
background-agents/integrations/: __init__.py
background-agents/safety/: environment_isolation.py
background-agents/src/: lib.rs
background-agents/src/field/: mod.rs
background-agents/src/polynomial/: mod.rs
background-agents/src/stark/: mod.rs
background-agents/src/types/: field.rs  mod.rs  polynomial.rs  secret.rs  stark.rs
background-agents/src/utils/: mod.rs
background-agents/utils/: __init__.py  config_loader.py  logger_setup.py
background-agents/validators/: __init__.py
docs/: WINTERFELL_INTEGRATION.md
examples/: winterfell_integration_example.rs
src/: lib.rs  winterfell_integration.rs
src/air/: constraints.rs  transitions.rs
src/benchmarks/: mod.rs
src/proof/: fri.rs  merkle.rs  mod.rs
src/types/: field.rs  mod.rs  polynomial.rs  secret.rs  stark.rs
tests/: integration_tests.rs
