[package]
name = "xfg-stark"
version = "0.1.0"
edition = "2021"
authors = ["XFG STARK Team"]
description = "XFG STARK Proof Implementation"

[features]
default = ["std"]
std = []
no_std = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
bincode = "1.3"
sha2 = "0.10"
rand = "0.8"

# Winterfell framework dependencies
winterfell = "0.8"
winter-crypto = "0.8"
winter-math = "0.8"
winter-utils = "0.8"

# Additional cryptographic dependencies
blake3 = "1.8"
ripemd = "0.1"

[dev-dependencies]
quickcheck = "1.0"

[[example]]
name = "winterfell_integration_example"
path = "examples/winterfell_integration_example.rs"

[[example]]
name = "simple_winterfell_demo"
path = "examples/simple_winterfell_demo.rs"
