[package]
name = "xfg-stark"
version = "0.1.0"
edition = "2021"
authors = ["XFG STARK Team <team@xfg-stark.org>"]
description = "XFG STARK Proof Implementation with Elite Senior Developer Standards"
license = "MIT"
repository = "https://github.com/ColinRitman/xfgwin"
keywords = ["stark", "cryptography", "zero-knowledge", "rust", "winterfell"]
categories = ["cryptography", "algorithms"]

[dependencies]
# Core cryptographic dependencies
winterfell = "0.8"
winter-math = "0.8"
winter-crypto = "0.8"
winter-utils = "0.8"

# Field arithmetic and mathematical operations
ff = "0.13"
group = "0.13"
rand = "0.8"
rand_core = "0.6"

# Cryptographic primitives
sha2 = "0.10"
blake2 = "0.10"
aes = "0.8"
chacha20 = "0.9"

# Serialization and I/O
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing and development
criterion = { version = "0.5", optional = true }
proptest = { version = "1.3", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.3"
quickcheck = "1.0"

[features]
default = ["std"]
std = []
alloc = []
no_std = []

# Performance features
asm = []
simd = []

# Security features
constant_time = []
secure_allocator = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "stark_proof_benchmarks"
harness = false
